--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -149,6 +149,8 @@
     <ClCompile Include="Engine\Text.cpp" />
     <ClCompile Include="Engine\Texture.cpp" />
     <ClCompile Include="Engine\Transform.cpp" />
+    <ClCompile Include="Scene\Scene_ClearResult.cpp" />
+    <ClCompile Include="Scene\Scene_GameOver.cpp" />
     <ClCompile Include="Scene\Scene_Play.cpp" />
     <ClCompile Include="Scene\Scene_Title.cpp" />
     <ClCompile Include="StageObject\Attack\Big_Bullet.cpp" />
@@ -156,6 +158,7 @@
     <ClCompile Include="StageObject\Attack\EM_Bullet.cpp" />
     <ClCompile Include="StageObject\BackGround\bg_ScoreBoard.cpp" />
     <ClCompile Include="StageObject\BackGround\bg_Stage1.cpp" />
+    <ClCompile Include="StageObject\BackGround\bg_Title.cpp" />
     <ClCompile Include="StageObject\Character\Chara_Player.cpp" />
     <ClCompile Include="StageObject\Character\Enemy\Chara_Enemy.cpp" />
     <ClCompile Include="StageObject\Gauge\Boss_HpGauge.cpp" />
@@ -186,6 +189,8 @@
     <ClInclude Include="Engine\Text.h" />
     <ClInclude Include="Engine\Texture.h" />
     <ClInclude Include="Engine\Transform.h" />
+    <ClInclude Include="Scene\Scene_ClearResult.h" />
+    <ClInclude Include="Scene\Scene_GameOver.h" />
     <ClInclude Include="Scene\Scene_Play.h" />
     <ClInclude Include="Scene\Scene_Title.h" />
     <ClInclude Include="StageObject\Attack\Big_Bullet.h" />
@@ -193,6 +198,7 @@
     <ClInclude Include="StageObject\Attack\EM_Bullet.h" />
     <ClInclude Include="StageObject\BackGround\bg_ScoreBoard.h" />
     <ClInclude Include="StageObject\BackGround\bg_Stage1.h" />
+    <ClInclude Include="StageObject\BackGround\bg_Title.h" />
     <ClInclude Include="StageObject\Character\Chara_Player.h" />
     <ClInclude Include="StageObject\Character\Enemy\Chara_Enemy.h" />
     <ClInclude Include="StageObject\Gauge\Boss_HpGauge.h" />
